# sermon

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  sequence.json
src/serial_tui/: checksum.py  cli.py  data_model.py  matcher.py  serial_manager.py  session.py
src/serial_tui/screens/: help_screen.py  overview_screen.py  port_screen.py  sequence_screen.py  trigger_screen.py
src/serial_tui/widgets/: rx_pane.py
src/sermon/: checksum.py  cli.py  data_model.py  main.py  matcher.py  session.py
src/sermon/screens/: help_screen.py  history_screen.py  overview_screen.py  port_screen.py  sequence_screen.py  trigger_screen.py
src/sermon/widgets/: rx_pane.py
tests/: test_checksum.py  test_cli.py  test_data_model.py  test_matcher.py  test_session.py  test_triggers.py
