[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "serial-tui"
version = "1.0.0"
description = "A serial monitor TUI with protocol testing capabilities"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crccheck>=1.3",
    "pyserial>=3.5",
    "textual>=8.2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
]

[project.scripts]
serial-tui = "serial_tui.cli:main"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"
filterwarnings = ["error"]
